[gd_scene load_steps=3 format=3 uid="uid://crah7tpundp8j"]

[ext_resource type="Script" uid="uid://dvm1qtrgii18l" path="res://OptionsMenu/options_menu.gd" id="1_1ef0r"]
[ext_resource type="AudioStream" uid="uid://c5ifq82i8wngu" path="res://MusicAndSound/Music/01. Risk of Rain.mp3" id="2_v8lr7"]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_1ef0r")

[node name="Button" type="Button" parent="."]
offset_left = 16.0
offset_top = 15.0
offset_right = 158.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 290.0
offset_top = 97.0
offset_right = 879.0
offset_bottom = 620.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume:"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXVolLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Blank" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Full Mute:"

[node name="MuteToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ResolutionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resolutions:"

[node name="Resolutions" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v8lr7")
autoplay = true
bus = &"Music"
parameters/looping = true
